Use stars for recommendations

--- a/dining_room/static/react/css/styles.scss
+++ b/dining_room/static/react/css/styles.scss
@@ -1,9 +1,10 @@
 ////////////////////////////////////////////////////////////////////
 // // Change bootstrap options to include gradients
 $enable-gradients: true;
-$warning: #0d91d8;
+// $primary: #6610f2;
+// $warning: #0d91d8;
 
-@import "~bootstrap/scss/bootstrap";
+// @import "~bootstrap/scss/bootstrap";
 
 // @import "~bootstrap/scss/functions";
 // @import "~bootstrap/scss/variables";
