Setup logger + various updates

--- a/dining_room/static/react/css/styles.scss
+++ b/dining_room/static/react/css/styles.scss
@@ -1,6 +1,6 @@
 ////////////////////////////////////////////////////////////////////
 // // Change bootstrap options to include gradients
-$enable-gradients: true;
+// $enable-gradients: true;
 // $primary: #6610f2;
 // $warning: #0d91d8;
 
