--- a/website/templates/website/roman2020.html
+++ b/website/templates/website/roman2020.html
@@ -9,6 +9,7 @@
 <meta charset="utf-8" />
 <meta name="generator" content="pandoc" />
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
+<link rel="shortcut icon" href="{% static 'favicon.ico' %}"/>
 
 
 
